syntax = "proto3";

package proto;

option go_package = "gateway/service/proto;proto";

// âœ… Common, reusable messages
message Empty {}

message Id {
  uint64 id = 1;
}

message StringId {
  string id = 1;
}


// -- USER SERVICE --------------------------------------------------

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc ListUsers(Empty) returns (ListUsersResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (Empty);
}

message User {
  uint64 id = 1;
  string name = 2;
  string email = 3;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message UpdateUserRequest {
  uint64 id = 1;
  string name = 2;
  string email = 3;
}

message GetUserRequest {
  uint64 id = 1;
}

message DeleteUserRequest {
  uint64 id = 1;
}

message ListUsersResponse {
  repeated User users = 1;
}

message UserResponse {
  User user = 1;
}


// -- POST SERVICE --------------------------------------------------

service PostService {
  rpc CreatePost(Post) returns (Post);
  rpc GetPost(PostId) returns (Post);
  rpc ListPosts(Empty) returns (PostList);
  rpc UpdatePost(Post) returns (Post);
  rpc DeletePost(PostId) returns (PostId);
}

message PostMedia {
  string id = 1;
  string media_url = 2;
  string mime_type = 3;
  int32 order = 4;
}

message Post {
  string id = 1;
  string author_id = 2;
  string text = 3;
  string visibility = 4; // PUBLIC, CONNECTIONS, PRIVATE
  repeated PostMedia media = 5;
  int64 created_at = 6; // Unix timestamp
  int64 updated_at = 7; // Unix timestamp
  int32 comment_count = 8;
  int32 like_count = 9;
  int32 share_count = 10;
}

// For identifying a post by ID
message PostId {
  string id = 1;
}


message CreatePostRequest {
  string author_id = 2;
  string text = 3;
  string visibility = 4; // PUBLIC, CONNECTIONS, PRIVATE
  repeated PostMedia media = 5;
  int64 created_at = 6; // Unix timestamp
  int64 updated_at = 7; // Unix timestamp
  int32 comment_count = 8;
  int32 like_count = 9;
  int32 share_count = 10;
}

message UpdatePostRequest {
  uint64 id = 1;
  string author_id = 2;
  string text = 3;
  string visibility = 4;
  repeated PostMedia media = 5;
  int64 created_at = 6; // Unix timestamp
  int64 updated_at = 7; // Unix timestamp
  int32 comment_count = 8;
  int32 like_count = 9;
  int32 share_count = 10;
}

message GetPostRequest {
  uint64 id = 1;
}

message DeletePostRequest {
  uint64 id = 1;
}

// For listing multiple posts
message PostList {
  repeated Post posts = 1;
}

message PostResponse {
  Post post = 1;
}
